--- a/rcg.css
+++ b/rcg.css
@@ -11,7 +11,7 @@ body{
 
 .grid{
     display: grid;
-    grid-template-columns: auto auto;
+    grid-template-columns: repeat(2, minmax(0, 1fr));
     gap: 50px 50px;
 }
 
