--- a/rcg.css
+++ b/rcg.css
@@ -4,8 +4,12 @@
     box-sizing: border-box;
 }
 
-body{
+main{
     background-color: rgb(60, 60, 60);
+    min-height: 100vh;
+    min-height: 100dvh;
+    display: grid;
+    grid-template-rows: auto 1fr auto;
 }
 
 #title{
@@ -14,13 +18,14 @@ body{
     font-size: clamp(2rem, 4vw, 4rem); 
     padding: 1em;
     text-shadow: 2px 2px #c25050;
-    height: 15dvh;
+    height: 15vh;
 }
 
 .grid{
     display: grid;
+    margin-top: 1em;
     padding: 1em;
-    height: 70dvh;
+    height: 70vh;
     grid-template-columns: repeat(2, minmax(0, 1fr));
     grid-template-rows: repeat(2, 1fr);
     gap: 1em 1em;
@@ -54,7 +59,7 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 15dvh;
+    height: 15vh;
 }
 
 #button{
