--- a/rcg.css
+++ b/rcg.css
@@ -7,7 +7,7 @@
 main{
     background-color: rgb(60, 60, 60);
     min-height: 100vh;
-    min-height: -webkit-fill-available;
+    min-height: 100dvh;
     display: grid;
     grid-template-rows: auto 1fr auto;
 }
